<resources>
    <string name="app_name">Budget Tracker</string>
    <string name="clear_btn">CLEAR ALL</string>
    <string name="transaction_btn">TRANSACTIONS</string>
    <string name="add_btn">ADD</string>

    <string name="clear_all">Clear All</string>
    <string name="clear_all_warning">WARNING: This will delete all transactions. Proceed?</string>
    <string name="yes">Yes</string>

    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_transaction">Add Transaction</string>

    <string name="total_prefix">Total: $</string>

    <string name="transaction_activity_title">All transactions</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="cost">Cost</string>
    <string name="invalid_input">Invalid input</string>
    <string name="transaction_file_name">transaction</string>
    <string name="no_transactions">No transactions</string>
</resources>